样式文件里添加编码设置

--- a/statics/styles/ecjia.function.css
+++ b/statics/styles/ecjia.function.css
@@ -1,4 +1,5 @@
-/* 
+@charset "utf-8";
+/*
  * function 
  * 功能（function）（.ecjiaf-）：为方便一些常用样式的使用，我们将这些使用率较高的样式剥离出来，按需使用，通常这些选择器具有固定样式表现，比如清除浮动等！不可滥用！
  */
